# PreTOI16

./: .gitignore  CMakeLists.txt  Test.cpp
CodeCube/: CUBE_038.cpp  CUBE_043.cpp  CUBE_080.cpp  CUBE_091.cpp  CUBE_119.cpp  CUBE_151.cpp  CUBE_164.cpp  CUBE_165.cpp  CUBE_181.cpp  CUBE_185.cpp  Expogo.cpp  Task_025.cpp  Task_066.cpp  Task_091.cpp  Task_121.cpp  Task_122.cpp
CodeJam/: ESA.cpp  Indicium.cpp  NestingDepth.cpp  NestingDepth.py  ParentingPartneringReturns.cpp  Vestigium.cpp
Facebook/2019/: A_Leapfrog_1.cpp
PreTOI16CodeCUbe/: CUBE_223.cpp  CUBE_224.cpp  CUBE_225.cpp  CUBE_226.cpp  CUBE_227.cpp  CUBE_228.cpp  TestCube233.cpp
Programming/: task_1002.cpp  task_1011.cpp  task_1020.cpp  task_1021.cpp  task_1024.cpp  task_1029.cpp  task_1030.cpp  task_1033.cpp  task_1034.cpp  task_1042.cpp  task_1044.cpp  task_1049.cpp  task_1071.cpp  task_1071_old.cpp  task_1075.cpp  task_1077.cpp  task_1079.cpp  task_1086.cpp  task_1091.cpp  task_1139.cpp  task_1151.cpp  task_1154.cpp  task_1157.cpp  task_1167.cpp  task_1167_new.cpp
TOI/: pretoi14_3C.cpp  toi10_d1_p1.cpp  toi10_test_p1.cpp  toi10_test_p2.cpp  toi10_test_p4.cpp  toi11_d1_p1.cpp  toi11_d1_p2.cpp  toi11_d1_p3.cpp  toi11_d2_p1.cpp  toi11_d2_p2.cpp  toi11_d2_p3.cpp  toi12_d1_p3.cpp  toi13_cats.cpp  toi13_orchid.cpp  toi13_robot.cpp  toi13_timerswitch.cpp  toi13_traveler.cpp
ThisSummer/: TASK_069.cpp  TASK_072.cpp  TASK_083.cpp  TASK_085.cpp  TASK_087.cpp  TASK_089.cpp  TASK_092.cpp  TASK_097.cpp  TASK_098.cpp  TASK_100.cpp  TASK_101.cpp  TASK_105.cpp  TASK_106.cpp  TASK_108.cpp  TASK_111.cpp  TASK_112.cpp  TASK_116.cpp  TASK_117.cpp  TASK_125.cpp  TASK_135.cpp  TASK_136.cpp  TASK_138.cpp  TASK_142.cpp  TASK_143.cpp  TASK_145.cpp  TASK_151.cpp  TASK_153.cpp  TASK_154.cpp  TASK_155.cpp  TASK_165.cpp  TASK_179.cpp  TASK_226.cpp  TASK_236.cpp  sudoku.txt
