cmake_minimum_required(VERSION 3.15)
project(PreTOI16)

set(CMAKE_CXX_STANDARD 14)

add_executable(task_1020 Programming/task_1020.cpp)
add_executable(TASK_069 ThisSummer/TASK_069.cpp)
add_executable(task_1049 Programming/task_1049.cpp)
add_executable(task_1002 Programming/task_1002.cpp)
add_executable(task_1034 Programming/task_1034.cpp)
add_executable(task_1033 Programming/task_1033.cpp)
add_executable(TASK_072 ThisSummer/TASK_072.cpp)
add_executable(task_1024 Programming/task_1024.cpp)
add_executable(task_1071 Programming/task_1071.cpp)
add_executable(task_1071_old Programming/task_1071_old.cpp)

add_executable(TASK_135 ThisSummer/TASK_135.cpp)
add_executable(TASK_138 ThisSummer/TASK_138.cpp)
add_executable(task_1167 Programming/task_1167.cpp)
add_executable(task_1167_new Programming/task_1167_new.cpp)
add_executable(TASK_154 ThisSummer/TASK_154.cpp)
add_executable(task_1021 Programming/task_1021.cpp)
add_executable(task_1030 Programming/task_1030.cpp)
add_executable(TASK_142 ThisSummer/TASK_142.cpp)
add_executable(TASK_083 ThisSummer/TASK_083.cpp)
add_executable(TASK_145 ThisSummer/TASK_145.cpp)
add_executable(Task_066 CodeCube/Task_066.cpp)
add_executable(task_1077 Programming/task_1077.cpp)
add_executable(Task_121 CodeCube/Task_121.cpp)
add_executable(TASK_153 ThisSummer/TASK_153.cpp)
add_executable(Task_025 CodeCube/Task_025.cpp)
add_executable(Test Test.cpp)
add_executable(TASK_092 ThisSummer/TASK_092.cpp)
add_executable(task_1079 Programming/task_1079.cpp)
add_executable(TASK_087 ThisSummer/TASK_087.cpp)
add_executable(Task_185 CodeCube/Task_185.cpp)
add_executable(Task_122 CodeCube/Task_122.cpp)
add_executable(TASK_226 ThisSummer/TASK_226.cpp)
add_executable(Task_091 CodeCube/Task_091.cpp)
add_executable(Vestigium CodeJam/Vestigium.cpp)
add_executable(NestingDepth CodeJam/NestingDepth.cpp)
add_executable(ParentingPartneringReturns CodeJam/ParentingPartneringReturns.cpp)