cmake_minimum_required(VERSION 3.15)
project(PreTOI16)

set(CMAKE_CXX_STANDARD 14)

#Programming in th
add_executable(task_1002 Programming/task_1002.cpp)
add_executable(task_1011 Programming/task_1011.cpp)
add_executable(task_1020 Programming/task_1020.cpp)
add_executable(task_1021 Programming/task_1021.cpp)
add_executable(task_1024 Programming/task_1024.cpp)
add_executable(task_1030 Programming/task_1030.cpp)
add_executable(task_1033 Programming/task_1033.cpp)
add_executable(task_1034 Programming/task_1034.cpp)
add_executable(task_1139 Programming/task_1139.cpp)
add_executable(task_1042 Programming/task_1042.cpp)
add_executable(task_1049 Programming/task_1049.cpp)
add_executable(task_1071 Programming/task_1071.cpp)
add_executable(task_1071_old Programming/task_1071_old.cpp)
add_executable(task_1075 Programming/task_1075.cpp)
add_executable(task_1077 Programming/task_1077.cpp)
add_executable(task_1079 Programming/task_1079.cpp)
add_executable(task_1167 Programming/task_1167.cpp)
add_executable(task_1167_new Programming/task_1167_new.cpp)

#ThisSummer
add_executable(TASK_069 ThisSummer/TASK_069.cpp)
add_executable(TASK_072 ThisSummer/TASK_072.cpp)
add_executable(TASK_083 ThisSummer/TASK_083.cpp)
add_executable(TASK_085 ThisSummer/TASK_085.cpp)
add_executable(TASK_087 ThisSummer/TASK_087.cpp)
add_executable(TASK_089 ThisSummer/TASK_089.cpp)
add_executable(TASK_092 ThisSummer/TASK_092.cpp)
add_executable(TASK_098 ThisSummer/TASK_098.cpp)
add_executable(TASK_100 ThisSummer/TASK_100.cpp)
add_executable(TASK_105 ThisSummer/TASK_105.cpp)
add_executable(TASK_106 ThisSummer/TASK_106.cpp)
add_executable(TASK_108 ThisSummer/TASK_108.cpp)
add_executable(TASK_111 ThisSummer/TASK_111.cpp)
add_executable(TASK_116 ThisSummer/TASK_116.cpp)
add_executable(TASK_135 ThisSummer/TASK_135.cpp)
add_executable(TASK_138 ThisSummer/TASK_138.cpp)
add_executable(TASK_142 ThisSummer/TASK_142.cpp)
add_executable(TASK_145 ThisSummer/TASK_145.cpp)
add_executable(TASK_153 ThisSummer/TASK_153.cpp)
add_executable(TASK_154 ThisSummer/TASK_154.cpp)
add_executable(TASK_155 ThisSummer/TASK_155.cpp)
add_executable(TASK_165 ThisSummer/TASK_165.cpp)
add_executable(TASK_226 ThisSummer/TASK_226.cpp)


#CodeCube
add_executable(CUBE_025 CodeCube/CUBE_025.cpp)
add_executable(CUBE_038 CodeCube/CUBE_038.cpp)
add_executable(CUBE_066 CodeCube/CUBE_066.cpp)
add_executable(CUBE_080 CodeCube/CUBE_080.cpp)
add_executable(CUBE_091 CodeCube/CUBE_091.cpp)
add_executable(CUBE_121 CodeCube/CUBE_121.cpp)
add_executable(CUBE_122 CodeCube/CUBE_122.cpp)
add_executable(CUBE_151 CodeCube/CUBE_151.cpp)
add_executable(CUBE_164 CodeCube/CUBE_164.cpp)
add_executable(CUBE_165 CodeCube/CUBE_165.cpp)
add_executable(CUBE_185 CodeCube/CUBE_185.cpp)

#TOI
add_executable(toi10_test_p4 TOI/toi10_test_p4.cpp)
add_executable(toi11_d1_p1 TOI/toi11_d1_p1.cpp)
add_executable(toi11_d1_p2 TOI/toi11_d1_p2.cpp)
add_executable(toi11_d1_p3 TOI/toi11_d1_p3.cpp)
add_executable(toi11_d2_p1 TOI/toi11_d2_p1.cpp)
add_executable(toi11_d2_p2 TOI/toi11_d2_p2.cpp)
add_executable(toi11_d2_p3 TOI/toi11_d2_p3.cpp)

#CodeJam Pre
add_executable(Vestigium CodeJam/Vestigium.cpp)
add_executable(NestingDepth CodeJam/NestingDepth.cpp)
add_executable(ParentingPartneringReturns CodeJam/ParentingPartneringReturns.cpp)
add_executable(Indicium CodeJam/Indicium.cpp)
add_executable(ESA CodeJam/ESA.cpp)
add_executable(Expogo CodeJam/Expogo.cpp)

add_executable(Test Test.cpp)
add_executable(TASK_112 ThisSummer/TASK_112.cpp)
add_executable(TASK_097 ThisSummer/TASK_097.cpp)
add_executable(TASK_151 ThisSummer/TASK_151.cpp)
add_executable(toi10_test_p1 TOI/toi10_test_p1.cpp)
add_executable(toi10_d1_p1 TOI/toi10_d1_p1.cpp)
add_executable(task_1044 Programming/task_1044.cpp)
add_executable(CUBE_223 PreTOI16CodeCUbe/CUBE_223.cpp)
add_executable(CUBE_225 PreTOI16CodeCUbe/CUBE_225.cpp)
add_executable(TestCube233 PreTOI16CodeCUbe/TestCube233.cpp)
add_executable(CUBE_226 PreTOI16CodeCUbe/CUBE_226.cpp)
add_executable(CUBE_228 PreTOI16CodeCUbe/CUBE_228.cpp)
add_executable(CUBE_227 PreTOI16CodeCUbe/CUBE_227.cpp)
add_executable(CUBE_224 PreTOI16CodeCUbe/CUBE_224.cpp)
add_executable(toi10_test_p2 TOI/toi10_test_p2.cpp)
add_executable(toi12_d1_p3 TOI/toi12_d1_p3.cpp)
add_executable(task_1086 Programming/task_1086.cpp)
add_executable(TASK_136 ThisSummer/TASK_136.cpp)
add_executable(TASK_236 ThisSummer/TASK_236.cpp)
add_executable(task_1029 Programming/task_1029.cpp)
add_executable(TASK_125 ThisSummer/TASK_125.cpp)
add_executable(task_1154 Programming/task_1154.cpp)
add_executable(task_1091 Programming/task_1091.cpp)
add_executable(TASK_143 ThisSummer/TASK_143.cpp)
add_executable(pretoi14_3C TOI/pretoi14_3C.cpp)
add_executable(A_Leapfrog_1 Facebook/2019/A_Leapfrog_1.cpp)
add_executable(task_1157 Programming/task_1157.cpp)
add_executable(CUBE_119 CodeCube/CUBE_119.cpp)
add_executable(TASK_179 ThisSummer/TASK_179.cpp)